manifests/gatekeeper/example_required_labels.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: foobar
    labels:
        gatekeeper: enabled
