manifests/gatekeeper/example_allowed_repos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blocked-pod
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
